RESOLVED FIXED279596
verifyGC failures related to AudioBufferSourceNode
https://bugs.webkit.org/show_bug.cgi?id=279596
Summary verifyGC failures related to AudioBufferSourceNode
Basuke Suzuki
Reported 2024-09-12 08:06:33 PDT
Seeing verifyGC failure because of the write barrier missing when touching the AudioBuffer's property.
Attachments
Basuke Suzuki
Comment 1 2024-09-12 08:07:02 PDT
Basuke Suzuki
Comment 2 2024-09-12 08:10:00 PDT
EWS
Comment 3 2024-09-12 14:15:55 PDT
Committed 283576@main (e1d0084801c2): <https://commits.webkit.org/283576@main> Reviewed commits have been landed. Closing PR #33550 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.