verifyGC failures related to AudioBufferSourceNode https://bugs.webkit.org/show_bug.cgi?id=279596 rdar://133248373

Reviewed by Keith Miller.

Seeing verifyGC failure because of the write barrier missing when touching the AudioBuffer's property.

* Source/WebCore/Modules/webaudio/AudioBuffer.cpp:
(WebCore::AudioBuffer::getChannelData):
* Source/WebCore/Modules/webaudio/AudioBuffer.h:

Canonical link: https://commits.webkit.org/283576@main